<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_app_background"
    tools:context=".view.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/user_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:hint="@string/input_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/guideC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType=""
        android:autofillHints="" />

    <Button
        android:id="@+id/lookup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp"
        android:backgroundTint="#EC81F2E5"
        android:text="@string/lookup"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideC" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="117dp"
        android:fontFamily="serif"
        android:text="@string/change_temperature_type"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="155dp"
        android:fontFamily="serif"
        android:text="@string/weather_app"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="171dp"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>